# daggre

./: .bumpversion.cfg  .eslintrc.cjs  .gitignore  .jestrc.js  LICENSE  README.md  index.html  package.json
.github/workflows/: build.yml
example/: index.css  index.html  index.js
examples/ipc/: main.py
examples/js/: index.html  index.js
examples/python/: index.css  index.html  index.js  server.py
js/: .jestrc.js  package.json  tsconfig.json
js/src/: graph.js  handler.js  index.css  index.js  transport.js
js/src/core/: edge.js  graph.js  index.js  node.js  shapes.js
js/src/transports/: index.js  json.js
js/tests/: import.test.js
python/: LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
python/daggre/: __init__.py
python/daggre/core/: common.py
python/daggre/static/: index.css  index.js
python/daggre/tests/: conftest.py  test_core.py  test_graph_generator_helper.py  test_transport.py
python/dagred3/: __init__.py
python/dagred3/core/: __init__.py  common.py  edge.py  exceptions.py  graph.py  node.py
python/dagred3/static/: index.css  index.js
python/dagred3/tests/: conftest.py  test_core.py  test_graph_generator_helper.py  test_transport.py
python/dagred3/transport/: __init__.py
python/dagred3/transports/: __init__.py  model.py  transport.py  update.py
src/: index.css  index.js  preview.js
tests/: import.test.js
