[build-system]
requires = [
    "hatchling>=1.3.1",
]
build-backend = "hatchling.build"

[project]
name = "dagred3"
description = "A convenience layer on top of `dagre-d3` (`dagre-d3-es`), for use in `dagre-d3-lite`"
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "Tim Paine", email = "t.paine154@gmail.com" },
]
keywords = [
    "Graph",
    "Data",
    "DAG",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "aiohttp",
    "aiostream",
    "orjson",
    "pydantic<2",
    "starlette",
    "udatetime",
    "uvicorn",
    "websockets",
]

[project.optional-dependencies]
develop = [
    "black>=23",
    "check-manifest",
    "isort",
    "mypy",
    "ruff>=0.3,<0.4",
    "pytest",
    "pytest-cov",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
repository = "https://github.com/timkpaine/dagre-d3-lite"
homepage = "https://github.com/timkpaine/dagre-d3-lite"

[tool.black]
color = true
line-length = 150
target-version = ['py310']

[tool.check-manifest]
ignore = [
	"dagred3/static/**",
	"js/**"
]

[tool.hatch.build]
artifacts = [
    "dagred3/static",
]

[tool.hatch.build.targets.sdist]
exclude = []

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "dagred3/static/index.js",
    "dagred3/static/index.css",
]
skip-if-exists = [
    "dagred3/static/index.js",
    "dagred3/static/index.css",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "../js"
build_cmd = "build"

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 150
profile = "black"
default_section = "THIRDPARTY"
sections = "FUTURE,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = "dagred3"

[tool.pytest.ini_options]
asyncio_mode = 'strict'
testpaths = 'pyproject_cookiecutter_example/tests'

[tool.ruff]
line-length = 150

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
