[build-system]
requires = [
    "hatchling>=1.3.1",
]
build-backend = "hatchling.build"

[project]
name = "daggre"
description = "A convenience layer on top of `dagre-d3` (`dagre-d3-es`)."
version = "0.1.1"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "Tim Paine", email = "t.paine154@gmail.com" },
]
keywords = [
    "Graph",
    "Data",
    "DAG",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "aiohttp",
    "aiostream",
    "orjson",
    "pydantic",
    "starlette",
    "uvicorn",
    "websockets",
]

[project.optional-dependencies]
develop = [
    "black>=23",
    "isort",
    "mypy",
    "ruff>=0.3,<0.4",
    "pytest",
    "pytest-cov",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Repository = "https://github.com/timkpaine/daggre"
Homepage = "https://github.com/timkpaine/daggre"

[tool.check-manifest]
ignore = [
	"daggre/static/**",
]

[tool.hatch.build]
artifacts = [
    "daggre/static",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
include = [
    "/daggre",
    "/pyproject.toml",
    "/setup.py",
    "LICENSE",
    "README.md",
]
exclude = [
    "/.mypy_cache",
    "/.ruff_cache",
    "/dist",
    "/Makefile",
]

[tool.hatch.build.targets.wheel]
include = [
    "/daggre",
]
exclude = [
    "/.mypy_cache",
    "/.ruff_cache",
    "/pyproject.toml",
    "/dist",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "daggre/static/index.js",
    "daggre/static/index.css",
]
skip-if-exists = [
    "daggre/static/index.js",
    "daggre/static/index.css",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "../js"
build_cmd = "build"
npm = "yarn"

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 150
profile = "black"
default_section = "THIRDPARTY"
sections = "FUTURE,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = "daggre"

[tool.pytest.ini_options]
asyncio_mode = 'strict'
testpaths = 'daggre/tests'

[tool.ruff]
line-length = 150

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
